# OptiTrackNatNet

./: CMakeLists.txt  OptiTrackNatNetConfig.cmake.in  README.md
.github/workflows/: ci.yml
src/OptiTrackNatNet/: OptiTrackNatNetClient.h  OptiTrackNatNetDevice.cpp
